hphp/test/zend/good/Zend/tests/bug40815.php.expectf
Fatal error: Uncaught exception 'Exception' with message 'Whiii' in %s/bug40815.php:11
Stack trace:
#0 (): main()
#1 {main}
foo
